# TrackYourMonny

./: .gitignore  README.md  diagrama.md  pyproject.toml  trackyourmonny.db
app/: app.py
app/api/v1/: bill.py  expense.py  user.py
app/core/: config.py  logging.py
app/db/: schema.py
app/db/schemas/: bill_schema.py  category_schema.py  expense_schema.py  user_schema.py
app/models/: expense_model.py  user_model.py
app/services/: expense_service.py  user_service.py
